--- a/stylesheet.css
+++ b/stylesheet.css
@@ -371,7 +371,8 @@ QTabBar::tab:left {
     width: 1.5em;
     margin-right: -4px;
     margin-left: 0px;
-    padding-top: 2px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     padding-right: 2px;
 }
 QTabBar::tab:top:first {
@@ -382,7 +383,7 @@ QTabBar::tab:top {
     height: 1.5em;
     margin-top: -2px;
     margin-bottom: 0px;
-    padding-left: 2px;
+    padding-left: 5px;
     padding-right: 2px;
 }
 QTabBar::tab:hover { background-color: #666666; }
