--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,9 +24,7 @@
 
  */
  
- QDialog {
-    background-color: #F4F4F4;
-}
+QDialog { background-color: #FFFFFF; }
 
 QLineEdit, QTextEdit, QAbstractSpinBox, QComboBox {
     border: 1px solid #999999;
@@ -35,10 +33,13 @@ QLineEdit, QTextEdit, QAbstractSpinBox, QComboBox {
     padding-bottom: 2px;
     margin: 0px;
 }
+
 QTextEdit {
     border-radius: 5px;
     padding: 1px;
 }
+
+QComboBox { padding-left: 3px; }
 
 QLineEdit:focus, QTextEdit:focus, QAbstractSpinBox:focus, QComboBox:focus {
     border: 1px solid #333333;
@@ -140,7 +141,6 @@ QListView {
     font: 5em;
 }
 
-
 QPushButton {
     color: #FFFFFF;
     margin: 0px;
@@ -159,10 +159,6 @@ QPushButton:pressed, QPushButton:checked { background-color: #333333; }
 /* END RecipeWidget */
 
 /* BEGIN IngredientToolbox */
-#IngredientToolbox QToolButton {
-    border: none;
-}
-
 QWidget#IngredientToolbox {
     border: none;
     border-right: 1px solid #333333;
@@ -352,20 +348,13 @@ QScrollBar::sub-page:horizontal
 
 
 /* QTabBar */
-QTabWidget::tab-bar:top {
-    left: 2px;
-}
-QTabWidget::tab-bar:left {
-    top: 4px;
-}
-
 QTabBar::tab {
     color: #FFFFFF;
     background-color: #999999;
 }
-QTabBar::tab:left:first {
-    border-top: 1px solid #000000;
-}
+
+QTabWidget::tab-bar:left { top: 4px; }
+QTabBar::tab:left:first { border-top: 1px solid #000000; }
 QTabBar::tab:left {
     border-bottom: 1px solid #000000;
     width: 1.5em;
@@ -375,9 +364,9 @@ QTabBar::tab:left {
     padding-bottom: 5px;
     padding-right: 2px;
 }
-QTabBar::tab:top:first {
-    border-left: 1px solid #000000;
-}
+
+QTabWidget::tab-bar:top { left: 2px; }
+QTabBar::tab:top:first { border-left: 1px solid #000000; }
 QTabBar::tab:top {
     border-right: 1px solid #000000;
     height: 1.5em;
@@ -386,13 +375,12 @@ QTabBar::tab:top {
     padding-left: 5px;
     padding-right: 2px;
 }
+
 QTabBar::tab:hover { background-color: #666666; }
 QTabBar::tab:selected { background-color: #333333; }
 /* END QTabBar */
 
-
 #RecipeWidget #tabWidget::pane {
     border: 0;
 }
-
 
