Added some docs; cleaned up some code; fixed splitter width issues

--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -30,6 +30,9 @@
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
+      <property name="handleWidth">
+       <number>1</number>
+      </property>
      </widget>
     </item>
    </layout>
