--- a/stylesheet.css
+++ b/stylesheet.css
@@ -161,8 +161,9 @@ QPushButton:pressed, QPushButton:checked { background-color: #333333; }
 /* BEGIN IngredientToolbox */
 QWidget#IngredientToolbox {
     border: none;
-    border-right: 1px solid #333333;
-    padding-right: 2px;
+    padding: 0;
+    margin: 0;
+    margin-right: 1px;
 }
 
 QToolBox::tab {
@@ -382,5 +383,12 @@ QTabBar::tab:selected { background-color: #333333; }
 
 #RecipeWidget #tabWidget::pane {
     border: 0;
+}
+
+QSplitter::handle:horizontal {
+    padding: 0;
+    margin: 0;
+    width: 1px;
+    border: 1px solid black;
 }
 
