Added brew-day stuff to print feature; added filename to both print and saveAs functions

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -389,6 +389,6 @@ QSplitter::handle:horizontal {
     padding: 0;
     margin: 0;
     width: 1px;
-    border: 1px solid black;
+    border: 1px solid #666666;
 }
 
